Fix blog page footer location on small screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -207,7 +207,6 @@ img {
 .content--blog {
   margin: 0 auto;
   max-width: 600px;
-  height: 100%;
   background-color: white;
 }
 
